Changed the structure a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 
+set(PROJECT_NAME Engine)
 set(EXTERNAL_FOLDER external)
 
-project(MainProj)
+project(${PROJECT_NAME})
 
 set(GLFW_BUILD_DOCS     OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS    OFF CACHE BOOL "" FORCE)
