--- a/api/CMakeLists.txt
+++ b/api/CMakeLists.txt
@@ -9,9 +9,9 @@ file(GLOB API_SRC
 
 add_library(${PROJECT_NAME} ${API_SRC})
 
-target_include_directories(${PROJECT_NAME} PRIVATE ../external/glew/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../external/glfw/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../external/assimp/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ${GLEW_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${GLFW_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${ASSIMP_INCLUDE_DIR})
 
 target_link_libraries(${PROJECT_NAME} glew_s)
 target_link_libraries(${PROJECT_NAME} glfw)
