--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,14 +1,15 @@
 cmake_minimum_required(VERSION 3.16)
 
 set(PROJECT_NAME engine)
+set(EXECUTABLE_NAME main)
 
 file(GLOB ENGINE_SRC
     src/*.cpp
     src/**/*.cpp
 )
 
-add_executable(engine ${ENGINE_SRC})
+add_executable(${EXECUTABLE_NAME} ${ENGINE_SRC})
 
-target_include_directories(${PROJECT_NAME} PRIVATE ../api/src)
+target_include_directories(${EXECUTABLE_NAME} PRIVATE ../api/src)
 
-target_link_libraries(${PROJECT_NAME} api)
+target_link_libraries(${EXECUTABLE_NAME} api)
